--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "create-react-app": "^2.1.8",
     "fs-extra": "^7.0.1",
+    "ipfs": "^0.35.0",
     "ipfs-http-client": "^30.1.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
     "react-scripts": "2.1.8",
-    "web3": "^1.0.0-beta.37"
+    "uuid": "^3.3.2",
+    "web3": "^1.0.0-beta.50"
   },
   "scripts": {
     "start": "react-scripts start",
